[package]
name = "tls-termination-proxy"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "High-performance TLS termination proxy written in Rust"
repository = "https://github.com/your-org/tls-termination-proxy"
authors = ["Your Name <your.email@example.com>"]

[[bin]]
name = "tls-proxy"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
rustls = "0.22"
tokio-rustls = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
prometheus = "0.13"
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
socket2 = "0.5"
rand = "0.8"
notify = "6.1"
futures = "0.3"
parking_lot = "0.12"
once_cell = "1.19"
rustls-pemfile = "2.0"
bytes = "1.5"
async-trait = "0.1"
derive_more = "0.99"
dashmap = "5.5"
arc-swap = "1.6"
trust-dns-resolver = "0.23"
x509-parser = "0.15"
tokio-tungstenite = "0.20"
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4"] }
base64 = "0.21"
sha2 = "0.10"
hmac = "0.12"
jsonwebtoken = "9.2"

[dev-dependencies]
tempfile = "3.8"
test-case = "3.3"
criterion = "0.5"
wiremock = "0.5"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
debug = 2
